src/test/ui/nll/user-annotations/type_ascription_static_lifetime.stderr
error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/type_ascription_static_lifetime.rs:6:19
   |
LL |     let y: &u32 = &x: &'static u32; 
   |                   ^^^^^^^^^^^^^^^^

error: aborting due to previous error

